# naruon

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ollama  LICENSE  README.md  SECURITY.md  abandoned.txt  commit_body.txt  commit_message.txt  docker-compose.apm.yml  docker-compose.gateway.yml  docker-compose.infra.yml  docker-compose.live-e2e.yml  docker-compose.mlx.yml  docker-compose.observability.yml  docker-compose.postgres-ha.yml  docker-compose.yml  final_patch.py  fix.py  fix.sh  fix_conflict.py  fix_crlf_and_upload.py  fix_deps.py  fix_test_file.py  get_comments.py  get_env.sh  get_last_run.sh  manual_run.sh  opencode.jsonc  package.json  parse_summary.py  patch.diff  (+34 more)
backend/: .coveragerc  README.md  import_fixtures.py  main.py  pyproject.toml  pytest.ini  pytest.ini.patch  requirements-hashes.txt  requirements.txt
backend/alembic/: env.py
backend/api/: __init__.py  accounts.py  ai_hub.py  auth.py  caldav_sync.py  calendar.py  data.py  dav.py  emails.py  emails.py.patch  emails.py.patch2  execution_items.py  llm.py  llm_providers.py  mailbox_accounts.py  mailbox_scope.py  network.py  observability.py  ontology.py  prompts.py  runner_config.py  runner_ws.py  runtime_config.py  search.py  security.py  session.py  tasks.py  tenant_config.py  tools.py  webdav.py
backend/core/: __init__.py  auth_tokens.py  config.py  exceptions.py  network_targets.py  observability.py  rbac.py  runtime_secrets.py  telemetry.py  url_validation.py  version.py
(+564 files in other folders)
